--- a/0x00-react_introduction/task_4/dashboard/package.json
+++ b/0x00-react_introduction/task_4/dashboard/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://AhmedMohamed800.github.io/alx-react",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
